.provarCaches/00D6C0000000xA6UAI/objects/sked__Location__c.object
<CustomObject>
    <fields>
        <fullName>Address_of_Owner__c</fullName>
        <label>Address of Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Expiration_Date__c</fullName>
        <label>Agreement Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alarm_Code__c</fullName>
        <label>Alarm Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Babysitters_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Babysitter&apos;s Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backup_Address__c</fullName>
        <label>Backup Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Geolocation__c</fullName>
        <label>Backup Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Coupons_Required__c</fullName>
        <label>Coupons Required</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Facility_Guide__c</fullName>
        <label>Facility Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facility_ID__c</fullName>
        <label>Saba Facility/Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Inactive_Date__c</fullName>
        <label>Facility Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <label>Location Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Agreement</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Renewal - Needed</fullName>
                </value>
                <value>
                    <fullName>Renewal - In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Active</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock_Box_Code__c</fullName>
        <label>Lock Box Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Area__c</fullName>
        <label>Market Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Predictive__c</fullName>
        <label>Predictive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RES_Building_Number__c</fullName>
        <label>RES Building Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Use_Description__c</fullName>
        <label>Room/Use Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Address__c</fullName>
        <description>The address of the location</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked__GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sked__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Requires_Whitelist__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this location require resources to be whitelisted before they can be allocated? (i.e. for site inductions)</inlineHelpText>
        <label>Requires Whitelist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Testing</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Training</fullName>
                </value>
                <value>
                    <fullName>NAT and CEP</fullName>
                </value>
                <value>
                    <fullName>NAT and Community</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Community Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>AQ_Locations</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sked__Region__c</field>
            <operation>contains</operation>
            <value>AQU</value>
        </filters>
        <filters>
            <field>Location_Status__c</field>
            <operation>equals</operation>
            <value>Pending Agreement,Active,Renewal - Needed,Renewal - In Progress,Not Active,Closing</value>
        </filters>
        <label>AQ Locations</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>sked__All</fullName>
        <columns>sked__Account__c</columns>
        <columns>sked__Type__c</columns>
        <columns>Is_Active__c</columns>
        <columns>NAME</columns>
        <columns>sked__Address__c</columns>
        <columns>sked__GeoLocation__Latitude__s</columns>
        <columns>sked__GeoLocation__Longitude__s</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sked__Type__c</field>
            <operation>equals</operation>
            <value>Community</value>
        </filters>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>sked__Region__c</field>
            <operation>contains</operation>
            <value>7,8,9,10,12</value>
        </filters>
        <label>Community Active</label>
    </listViews>
    <listViews>
        <fullName>sked__All_with_regions</fullName>
        <columns>NAME</columns>
        <columns>sked__Address__c</columns>
        <columns>sked__Region__c</columns>
        <columns>sked__Account__c</columns>
        <columns>sked__Type__c</columns>
        <columns>sked__GeoLocation__Latitude__s</columns>
        <columns>sked__GeoLocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>sked__Type__c</field>
            <operation>equals</operation>
            <value>NAT and Community</value>
        </filters>
        <label>All with regions</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>